# kaspersky_task

./: CMakeLists.txt  README.md
scanner_exe/: CMakeLists.txt  main.cpp
scanner_lib/: CMakeLists.txt
scanner_lib/logger/: logger.cpp  logger.hpp
scanner_lib/scanner/: scanner.cpp  scanner.hpp
tests/: CMakeLists.txt  main.cpp
